# simplicio-loop-quality

./: .bootstrap  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: quality-gap.yml
.github/workflows/: ci.yml
READMEs/: README.ar-SA.md  README.de-DE.md  README.es-ES.md  README.fr-FR.md  README.hi-IN.md  README.it-IT.md  README.ja-JP.md  README.ko-KR.md  README.nl-NL.md  README.pl-PL.md  README.pt-BR.md  README.ru-RU.md  README.tr-TR.md  README.zh-CN.md
backlog/: README.md  issues.json
docs/: ARCHITECTURE.md  QUALITY_CONTRACT.md  UPSTREAM_REQUIREMENTS.md
scripts/: backlog.py  check.py
src/simplicio_loop_quality/: __init__.py  agents.py  cli.py  evidence.py  gate.py  goal.py  loop_invoker.py  policy.py
src/simplicio_loop_quality/contracts/: __init__.py  loop-extension.json  quality-evidence-v1.schema.json  quality-gate-verdict-v1.schema.json  quality-plan-v1.schema.json  strict-default.json
tests/: helpers.py
tests/integration/: test_architecture_boundary.py  test_extension_manifest.py
tests/system/: test_cli.py
tests/unit/: test_agents.py  test_backlog.py  test_evidence.py  test_gate.py  test_goal.py  test_loop_invoker.py  test_policy.py
